--- a/package.json
+++ b/package.json
@@ -1,62 +1,66 @@
 {
-  "name": "@se-2/nextjs",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "build": "next build",
-    "check-types": "tsc --noEmit --incremental",
-    "dev": "next dev",
-    "format": "prettier --write . '!(node_modules|.next|contracts)/**/*'",
-    "lint": "next lint",
-    "serve": "next start",
-    "start": "next dev",
-    "vercel": "vercel",
-    "vercel:yolo": "vercel --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true"
-  },
-  "dependencies": {
-    "@ethersproject/providers": "~5.7.2",
-    "@heroicons/react": "~2.0.11",
-    "@rainbow-me/rainbowkit": "1.3.5",
-    "@uniswap/sdk-core": "~4.0.1",
-    "@uniswap/v2-sdk": "~3.0.1",
-    "@xmtp/frames-validator": "^0.6.0",
-    "ai": "^3.0.18",
-    "blo": "~1.0.1",
-    "daisyui": "4.5.0",
-    "frames.js": "^0.11.4",
-    "inngest": "^3.16.1",
-    "llamaindex": "^0.2.2",
-    "mongodb": "^6.5.0",
-    "next": "~14.0.4",
-    "next-themes": "~0.2.1",
-    "nprogress": "~0.2.0",
-    "qrcode.react": "~3.1.0",
-    "react": "~18.2.0",
-    "react-copy-to-clipboard": "~5.1.0",
-    "react-dom": "~18.2.0",
-    "react-hot-toast": "~2.4.0",
-    "use-debounce": "~8.0.4",
-    "usehooks-ts": "2.13.0",
-    "viem": "1.19.9",
-    "wagmi": "1.4.12",
-    "zustand": "~4.1.2"
-  },
-  "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "~4.1.1",
-    "@types/node": "^17.0.45",
-    "@types/nprogress": "^0",
-    "@types/react": "^18.0.21",
-    "@types/react-copy-to-clipboard": "^5.0.4",
-    "@typescript-eslint/eslint-plugin": "~5.40.0",
-    "autoprefixer": "~10.4.12",
-    "eslint": "~8.24.0",
-    "eslint-config-next": "~14.0.4",
-    "eslint-config-prettier": "~8.5.0",
-    "eslint-plugin-prettier": "~4.2.1",
-    "postcss": "~8.4.16",
-    "prettier": "~2.8.4",
-    "tailwindcss": "~3.3.3",
-    "type-fest": "~4.6.0",
-    "typescript": "~5.1.6"
-  }
+    "name": "@se-2/nextjs",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "build": "next build",
+        "check-types": "tsc --noEmit --incremental",
+        "dev": "next dev",
+        "format": "prettier --write . '!(node_modules|.next|contracts)/**/*'",
+        "lint": "next lint",
+        "serve": "next start",
+        "start": "next dev",
+        "vercel": "vercel",
+        "vercel:yolo": "vercel --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true"
+    },
+    "dependencies": {
+        "@ethersproject/providers": "~5.7.2",
+        "@heroicons/react": "~2.0.11",
+        "@neynar/nodejs-sdk": "^1.15.0",
+        "@rainbow-me/rainbowkit": "1.3.5",
+        "@uniswap/sdk-core": "~4.0.1",
+        "@uniswap/v2-sdk": "~3.0.1",
+        "@xmtp/frames-validator": "^0.6.0",
+        "add": "^2.0.6",
+        "ai": "^3.0.18",
+        "blo": "~1.0.1",
+        "daisyui": "4.5.0",
+        "frames.js": "latest",
+        "inngest": "^3.16.1",
+        "llamaindex": "^0.2.2",
+        "mongodb": "^6.5.0",
+        "next": "~14.0.4",
+        "next-themes": "~0.2.1",
+        "nprogress": "~0.2.0",
+        "qrcode.react": "~3.1.0",
+        "react": "~18.2.0",
+        "react-copy-to-clipboard": "~5.1.0",
+        "react-dom": "~18.2.0",
+        "react-hot-toast": "~2.4.0",
+        "use-debounce": "~8.0.4",
+        "usehooks-ts": "2.13.0",
+        "viem": "1.19.9",
+        "wagmi": "1.4.12",
+        "yarn": "^1.22.22",
+        "zustand": "~4.1.2"
+    },
+    "devDependencies": {
+        "@trivago/prettier-plugin-sort-imports": "~4.1.1",
+        "@types/add": "^2",
+        "@types/node": "^17.0.45",
+        "@types/nprogress": "^0",
+        "@types/react": "^18.0.21",
+        "@types/react-copy-to-clipboard": "^5.0.4",
+        "@typescript-eslint/eslint-plugin": "~5.40.0",
+        "autoprefixer": "~10.4.12",
+        "eslint": "~8.24.0",
+        "eslint-config-next": "~14.0.4",
+        "eslint-config-prettier": "~8.5.0",
+        "eslint-plugin-prettier": "~4.2.1",
+        "postcss": "~8.4.16",
+        "prettier": "~2.8.4",
+        "tailwindcss": "~3.3.3",
+        "type-fest": "~4.6.0",
+        "typescript": "~5.1.6"
+    }
 }
